syntax = "proto3";
package supplierMicro;
option go_package = "./;proto";

service SupplierMicroService{
  rpc CreateStation (Station) returns (Response) {}
  rpc GetLocations (Request) returns(Response) {}
  rpc CreateStationInLocation (StationLocation) returns(Response) {}
}

message Request {}

message Station {
  int32 id = 1;
  string name = 2;
  bool is_active = 3;
  float latitude = 4;
  float longitude = 5;
}

message Location {
  int32 id = 1;
  float latitude = 2;
  float longitude = 3;
  string label = 4;
}

message StationLocation {
  Station scooter_station = 1;
  Location location = 2;
}

message Response {
  bool success = 1;
  Location location = 2;
  repeated Location locations = 3;
  Station scooter_station = 4;
  repeated Station scooter_stations = 5;
}
